<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_rect_without_curve"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="MissingPrefix"
    style="@style/CustomProgressDialog"
    >

    <TextView
        fontPath="@string/font_bold"
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/dialog_alert_heading"
        android:visibility="visible"
        android:textColor="#575757"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/alertMsg"
        fontPath="@string/font_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:maxLines="4"
        android:text="@string/no_internet"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:id="@+id/button"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/red_rectangle"
            />

    </LinearLayout>



</LinearLayout>
