<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/noDataFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_200dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:src="@mipmap/icn_data_not_found" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_1dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_15dp"
                    android:layout_height="@dimen/_15dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_2dp"
                    android:src="@mipmap/error" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_regular"
                    android:gravity="center"
                    android:text="@string/error"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/raleway_regular"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:gravity="center"
                android:text="@string/try_again"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_18sp"
                android:layout_gravity="center"
                android:padding="@dimen/_5dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
